Consistency pass: section-subline class, fix spacing in awards and activities

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -74,6 +74,13 @@ p {
   margin-bottom: 0.1em;
 }
 
+.section-subline {
+  color: #777;
+  font-style: italic;
+  margin-top: 0;
+  margin-bottom: 0.3em;
+}
+
 .year-label {
   display: block;
   margin-top: 0.8em;
